Show all if search input is empty